@@ -577,8 +577,9 @@ svn_config_ensure (apr_pool_t *pool)
    "The values in config-key represent the options in the [DEFAULTS] section."
    "\n"
    "The keys below config-key represent other sections, and their values\n"
-   "represent the options. Only values of type REG_SZ will be used; other\n"
-   "values, as well as the keys' default values, will be ignored.\n"
+   "represent the options. Only values of type REG_SZ whose name doesn't\n"
+   "start with a '#' will be used; other values, as well as the keys'\n"
+   "default values, will be ignored.\n"
    "\n"
    "\n"
    "File locations\n"
